--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			}
 			.interface{
 				position:absolute;
-				top:10px;
-				left:20%;
+				top:40px;
+				left:400px;
 			}
 			.range{
 				width:200px;
@@ -35,6 +35,7 @@
 	</head>
 	<body>
 		<div id="colorMarker">
+			<h4>Hover over a Peers to see its connections:</h4>
 			<span style="color:green">Download Connections</span><br />
 			<span style="color:orange">Upload Connections</span>
 		</div>
